Implement /oapi endpoint to retrieve openapi spec
